// Vitest Snapshot v1

exports[`plugins/css > should not apply postcss-loader when target is node 1`] = `
{
  "module": {
    "rules": [
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "@modern-js/builder-shared/ignore-css-loader",
          },
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/css-loader",
            "options": {
              "importLoaders": 1,
              "modules": {
                "auto": true,
                "exportLocalsConvention": "camelCase",
                "exportOnlyLocals": true,
                "localIdentName": "[path][name]__[local]-[hash:base64:6]",
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/css > should override browserslist of autoprefixer when using output.overrideBrowserslist config 1`] = `
{
  "module": {
    "rules": [
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/css-loader",
            "options": {
              "importLoaders": 1,
              "modules": {
                "auto": true,
                "exportLocalsConvention": "camelCase",
                "localIdentName": "[path][name]__[local]-[hash:base64:6]",
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "Chrome 80",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "Chrome 80",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/css > should remove some postcss plugins based on browserslist 1`] = `
{
  "module": {
    "rules": [
      {
        "resolve": {
          "preferRelative": true,
        },
        "sideEffects": true,
        "test": /\\\\\\.css\\$/,
        "use": [
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/mini-css-extract-plugin/dist/loader.js",
          },
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/css-loader",
            "options": {
              "importLoaders": 1,
              "modules": {
                "auto": true,
                "exportLocalsConvention": "camelCase",
                "localIdentName": "[path][name]__[local]-[hash:base64:6]",
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/postcss-loader",
            "options": {
              "postcssOptions": {
                "plugins": [
                  [Function],
                  [Function],
                  [Function],
                  {
                    "browsers": [
                      "Chrome 100",
                    ],
                    "info": [Function],
                    "options": {
                      "flexbox": "no-2009",
                      "overrideBrowserslist": [
                        "Chrome 100",
                      ],
                    },
                    "postcssPlugin": "autoprefixer",
                    "prepare": [Function],
                  },
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
    ],
  },
}
`;
